--- a/app/templates/instances/edit.html
+++ b/app/templates/instances/edit.html
@@ -170,10 +170,14 @@ function testConnection() {
     testBtn.innerHTML = '<i class="fas fa-spinner fa-spin me-2"></i>测试中...';
     testBtn.disabled = true;
     
+    // 获取CSRF token
+    const csrfToken = document.querySelector('input[name="csrf_token"]').value;
+    
     fetch(`/instances/api/instances/{{ instance.id }}/test`, {
         method: 'GET',
         headers: {
-            'Content-Type': 'application/json'
+            'Content-Type': 'application/json',
+            'X-CSRFToken': csrfToken
         }
     })
     .then(response => response.json())
